# graf

./: .gitignore  pyproject.toml
configs/dataset/: india_unsignalized.yaml
configs/detection/: yolov8.yaml
configs/eval/: paper_metrics.yaml
configs/graph/: interaction_graph.yaml
configs/homography/: default.yaml
configs/model/: gnn_baseline.yaml  graph_binary_risk.yaml
configs/ssm/: drac.yaml  pet.yaml  ttc.yaml
configs/tracking/: bytetrack.yaml
configs/train/: default.yaml
data/processed/graphs/: sample_demo_video_f000001.pt  sample_demo_video_f000002.pt  sample_demo_video_f000003.pt
docs/: annotation_protocol.md  dataset_protocol.md
requirements/: base.txt  dev.txt  gpu.txt
scripts/: bootstrap_repo.py  build_graph_dataset.py  build_graphs.py  build_trajectories.py  compute_ssm.py  estimate_homography.py  evaluate_gcn_risk.py  evaluate_model.py  export_graph_samples.py  export_paper_results.py  extract_frames.py  make_windows.py  pipeline_status.py  run_detection.py  run_tracking.py  train_gcn_risk.py  train_model.py
src/graf/: cli.py
src/graf/calibration/: homography.py  world_coords.py
src/graf/data/: dataset.py  graph_dataset.py  schema.py
src/graf/evaluation/: binary_metrics.py
src/graf/graph/: __init__.py  builders.py  edges.py  features.py  nodes.py  (+2 more)
studies/site_01_ahmedabad_unsignalized/: config.yaml  notes.md
tests/: test_baselines.py  test_binary_metrics.py  test_dataset_schema.py  test_gcn_risk.py  test_graph_builder.py  test_graph_dataset.py  test_graph_features.py  test_kinematics.py  test_pyg_export.py  test_ssm.py
(+8 files in other folders)
