[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graf"
version = "0.1.0"
description = "Graph-based surrogate safety analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "ASCC Sharq 786"}
]
dependencies = []

[project.scripts]
graf = "graf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
